Fix issue #458, avoid scrollbars on first sidebar

--- a/data/css/buttons.css
+++ b/data/css/buttons.css
@@ -38,6 +38,7 @@
 }
 
 .start-experience {
+    margin-top: 30px;
     padding: 10px;
     border-radius: 50%;
     width: 24%;
